# lantern-leaf

./: .gitignore  Cargo.toml  GUI-ROADMAP.md  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: gui-migration.yml
branding/: README.md  mascot.md  project-name.md
conf/: abbreviations.toml  calibre.toml  config.toml  normalizer.toml  quack-check.toml
crates/ebup-core/: Cargo.toml
crates/ebup-core/src/: lib.rs  session.rs
crates/lanternleaf-core/: Cargo.toml
crates/lanternleaf-core/src/: lib.rs  session.rs
docs/: bridge-compatibility-policy.md  gui-migration-policy.md  gui-parity-report.md  migration-baseline-log-scenarios.md  migration-baseline-metrics.md  migration-feature-inventory.md  migration-freeze-policy.md  migration-non-regression-contract.md  migration-parity-acceptance-checklist.md  tauri-capabilities.md  tauri-command-groups.md  tauri-e2e-runner.md  ui-component-policy.md
docs/architecture/: native-html-dual-view.md
docs/qa/: native-html-epub-checklist.md
docs/roadmaps/: browser-tabs-import-manual-qa-checklist.md  browser-tabs-import-via-browsr-roadmap.md  dual-view-ingestion-and-tts-pipeline-roadmap.md  dual-view-manual-qa-checklist.md  html-faithful-rendering-and-text-sync-roadmap.md  html-faithful-rendering-manual-qa-checklist.md  native-html-epub-rendering-and-tts-sync-roadmap.md  native-pdf-rendering-and-text-sync-roadmap.md  tts-player-widget-roadmap.md  ui-lag-reduction-roadmap.md
res/: pg64317-images-3.epub
src/: app.rs  browser_tabs.rs  cache.rs  calibre.rs  cancellation.rs  config.rs  epub_loader.rs  main.rs  normalizer.rs  pagination.rs  text_utils.rs  theme.rs  tts.rs  tts_worker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/conf/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session.rs
src/app/: messages.rs  mod.rs  state.rs  update.rs  view.rs
src/app/state/: bookmark.rs  constants.rs  mod.rs  reader.rs  tts.rs  ui.rs
src/app/update/: appearance.rs  core.rs  mod.rs  navigation.rs  scroll.rs  tts.rs
src/app/update/core/: mod.rs  reducer.rs  runtime.rs  shortcuts.rs
src/app/update/tts/: transitions.rs
src/config/: defaults.rs  mod.rs  models.rs  tables.rs
src/quack_check/: chunk_plan.rs  cli.rs  config.rs  mod.rs  pipeline.rs  policy.rs  postprocess.rs  probe.rs  report.rs  util.rs
src/quack_check/engine/: mod.rs  python.rs
ui/: STYLE-POLICY.md  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json
ui/e2e/: perfBaseline.spec.ts  readerFlow.spec.ts
ui/e2e-tauri/: smoke.test.mjs
ui/public/: branding-colors.css  site.webmanifest
ui/scripts/: auditBundleSize.mjs  runTauriSoak.mjs
ui/src/: App.tsx  main.tsx  styles.css  types.ts
ui/src/api/: tauri.ts
ui/src/components/: ErrorBoundary.tsx  ReaderQuickActionsDock.tsx  ReaderShell.tsx  StarterShell.tsx  TtsPlayerWidget.tsx  calibreList.ts  htmlSync.ts  layoutPolicies.ts  prettyHtml.ts  readerTypography.ts
ui/src/perf/: debug.ts
ui/src/store/: appStore.ts  selectors.ts
ui/src/store/slices/: calibreSlice.ts  jobsSlice.ts  notificationsSlice.ts  readerSlice.ts  sessionSlice.ts  settingsSlice.ts  shared.ts  statsSlice.ts  ttsSlice.ts  types.ts
ui/src/theme/: mapping.ts
ui/tests/: appBrowserTabTransition.test.tsx  appStore.test.ts  calibreList.test.ts  htmlSync.test.ts  layoutPolicies.test.ts  prettyHtml.test.ts  readerTtsPlayerIntegration.test.tsx  readerTypography.test.ts  starterBrowserTabs.test.tsx  storeSelectors.test.ts  tauriApi.test.ts  themeMapping.test.ts  tmpBrowserTabLoop.test.tsx  ttsPlayerWidget.test.tsx
