[package]
name = "ebup-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
epub = "2.1.5"
html2text = "0.16.4"
iced = { version = "0.13.1", default-features = false, features = ["wgpu", "tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
piper-rs = "0.1.9"
rodio = { version = "0.18", features = ["vorbis", "flac"] }
threadpool = "1.8"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[patch.crates-io]
espeak-rs-sys = { path = "vendor/espeak-rs-sys" }
