[package]
name = "ebup-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
epub = "2.1.5"
html2text = "0.16.4"
iced = { version = "0.13.1", default-features = false, features = ["wgpu", "tokio", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
piper-rs = "0.1.9"
rodio = { version = "0.18", features = ["vorbis", "flac"] }
hound = "3.5"
sonic-rs-sys = "0.1.9"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[patch.crates-io]
espeak-rs-sys = { path = "vendor/espeak-rs-sys" }
