[package]
name = "lanternleaf"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "src-tauri", "crates/lanternleaf-core"]
resolver = "2"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
piper-rs = "0.1.9"
hound = "3.5"

[patch.crates-io]
espeak-rs-sys = { path = "vendor/espeak-rs-sys" }
