[package]
name = "lanternleaf-tauri"
version = "0.1.0"
edition = "2024"
default-run = "lanternleaf-tauri"

[lib]
name = "lanternleaf_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
ctrlc = "3.5.2"
lanternleaf-core = { path = "../crates/ebup-core" }
hound = "3.5"
piper-rs = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2.8.0"
tracing = "0.1"
ts-rs = { version = "10.0.0", features = ["serde-compat"] }

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
