[package]
name = "ebup-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
epub = "2.1.5"
html2text = "0.16.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
sha2 = "0.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1.12"
unicode-normalization = "0.1.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ts-rs = { version = "10.0.0", features = ["serde-compat"] }
rodio = { version = "0.18", features = ["vorbis", "flac"] }
sonic-rs-sys = "0.1.9"
